--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,13 @@
             <artifactId>flyway-core</artifactId>
             <version>9.17.0</version>
         </dependency>
+        <!-- Added for Instance to JSON conversion -->
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.15.1</version>
+        </dependency>
 
     </dependencies>
 
